--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@_types/*": ["./types/*"]
+      "@_types/*": ["store/types/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
